trunk/Archive2/f6/f35cdfd203ab94/output
main.cpp:37:2: error: expected '}'
}
 ^
main.cpp:17:1: note: to match this '{'
{
^
main.cpp:21:46: error: unknown type name 't'
    void insert(T t) { a_map.push_back(U{new t});
                                             ^
main.cpp:37:2: error: expected '}'
}
 ^
main.cpp:21:22: note: to match this '{'
    void insert(T t) { a_map.push_back(U{new t});
                     ^
main.cpp:37:2: error: expected ';' after struct
}
 ^
 ;
4 errors generated.
